LIST OF CHANGES

 - removing reflector allow client side JS to request XML feed directly from PSD
 - use lims_url config file entry to set PSD server location
 - gseq cluster hoop jumping for test 10-gbs_plex.t
 - use bwa0_6 as default aligner when searching for references
 - long_info role:
     when parsing RunInfo.xml look for FlowcellLayout rather than version,
     remove unused methods and attributes,
     use run parameters file to retrieve additional information

release 86.10.1
 - following changes to npg_tracking::illumina::run::short_info role,
   patch staging monitor, which started to fail if run id could
   not be retrieved
 - other changes to staging monitor:
     improve reporting
     change the order when validating run folders, will try
       to retrieve run id first, then validate the name
     propagate db schema handle
     use db schema accessor that is used by npg_tracking::illumina::runfolder
       and its roles
     remove custom code where existing APIs can be used

release 86.10
 - the bug in paged run views where a particular instrument was selected
     is fixed
 - the frame height for displaying runs on an instrument page is increased
 - displayed instrument statuses in the instrument view are limited
     to most recent (created within a year from the current date)
 - npg_tracking::illumina::runfolder is simplified at a cost of losing
   ability to pass to the constructor an arbitrary path
 - npg_tracking::illumina::run::short_info role - added database
   look-up aided ability to deal with arbitrary run folder names
 - use icons from the latest set of brand images
 - display institute's logo and favicon only if pages are served
     from institute's servers
 - removed unnecessary aliasing of urls
 - deleted unused (dif_files_path and pb_cal_path) runfolder accessors
 - method to find file with globin genes inside transcriptome repo added
 - changes to support gbs_plex repository

release 86.9